# vauntico-server

./: .env.example  .env.production  .env.template  .env.test  .eslintrc.cjs  .eslintrc.json  .gitallowed  .gitattributes  .gitignore  .kilocodemodes  .npmrc  .pypirc  .railwayignore  .releaserc.json  .stylelintrc.json  .vercelignore  BACKEND_DEPLOYMENT_V2_GUIDE.md  BLOCKER_REPORT_TEMPLATE.md  BUILD_CI_STATUS_REPORT.md  CHANGELOG.md  CI_CD_FAILURE_TRIAGE_REPORT.md  CLAUDE_CODE_SETUP_GUIDE.md  COMPREHENSIVE_BUILD_VERIFICATION_REPORT.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  CONTRIBUTOR_GUIDE_PRODUCTION.md  CONTRIBUTOR_ONBOARDING.md  CRITICAL_PRODUCTION_ISSUE_ANALYSIS.md  DAILY_DIGEST_ENHANCEMENTS_GUIDE.md  DAILY_DIGEST_README.md  DASHBOARD_README.md  DATA_EFFICIENCY_GUIDE.md  DATA_EFFICIENCY_STRATEGY.md  DEPLOYMENT_BASTION_GUIDE.md  DEPLOYMENT_COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ENHANCED.md  DEPLOYMENT_HANDOFF_PROTOCOL.md  DEPLOYMENT_READINESS_ASSESSMENT.md  DEPLOYMENT_RECOVERY_CHECKLIST.md  (+137 more)
.github/: HOTFIX_TEMPLATE.md  SIMPLE_FIX_TEMPLATE.md  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
.kilocode/: mcp.json
.vercel/: project.json
alerts/: alert.rules.yml
api/: waitlist.js
assets/: vauntico_cookie_banner.tsx
config/: cline-workflow-prompt.md  mcp.json
configs/: logging.json  services.json
docs/: 00-index.md  01-landing-page-hero.md  02-pricing-tiers.md  03-workshop-kit-scroll.md  04-audit-service-scroll.md  05-launch-scroll-pt1.md  05-launch-scroll-pt2.md  06-core-features-scroll.md  07-testimonial-social-proof.md  08-content-calendar.md  09-distribution-layer-scroll.md  10-agency-scroll.md  ACTIVATION_STATUS.md  AGENCY_CLI_QUICKSTART.md  AGENCY_IMPLEMENTATION_SUMMARY.md  AGENCY_SCROLL_COMPLETE.md  AGENCY_SCROLL_FINAL_REPORT.md  AGENCY_SCROLL_README.md  AGENTS.md  ARCHITECTURE.md  ASCENSION_SCROLL.md  AST.md  AUDIT_ACTION_PLAN.md  AUDIT_FILES_INDEX.md  AUDIT_PREPARATION_GUIDE.md  AUDIT_REPORT.md  AUDIT_VALIDATOR_QUICKSTART.md  AUTHENTIC_AFRICAN_IMAGES.md  BEFORE_AFTER_COMPARISON.md  BEFORE_AFTER_METRICS.md  CHANGELOG.md  CLI_ONBOARDING_COMPLETE.md  CLI_ONBOARDING_DEMO_SCREENSHOTS.md  CLI_ONBOARDING_README.md  CLI_ONBOARDING_USER_GUIDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_POSITIONING_ANALYSIS.md  COMPLETE_FEATURES_ADDED.md  COMPONENT_FIXES_IN_PROGRESS.md  CONFIG.md  (+412 more)
emergency-backup-20260114-195602/: bfg-cleanup-instructions.md  security-hardening-checklist.md
filesystem-mcp-server/: test-file.txt
homepage-redesign/: railway.toml
mcp-tools/: ORCHESTRATION_SUMMARY.md  README.md  SUITE_SUMMARY.md  USAGE_GUIDE.md  install-all.js  mcp-config.json  mcp-github-schema.json  mcp-github.json  mcp-oci.json  mcp-onboarding.json  mcp-plugins.json  mcp-secrets-schema.json  mcp-vercel-schema.json  mcp-vercel.json  orchestration.js
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
nginx/: nginx.conf  vauntico.conf
platformio-mcp-server/: .gitignore  LICENSE  README.md  implementation_plan.md  llms-install.md  package.json  tsconfig.json
public/: waitlist.json
sample-certificate-files/: fullchain.pem  privkey.pem
scripts/: README_SECRET_ROTATION.md  backend-deploy.sh  cleanup.sh  configure-github-secrets.sh  contributor-onboard.js  db-connectivity-test.sh  deploy-via-bastion.sh  emergency-security-response.ps1  emergency-security-response.sh  enforce-standards-fixed.js  enforce-standards.cjs  go-live-validation.sh  gpg-setup.sh  init-db.sql  merge-strategy-workflow.sh  oci-deploy-all.sh  oci-health-report.ps1  oci-health-report.sh  post-launch-validation.sh  pre-push-hygiene.sh  pre-push-ritual.cjs  pre-push-ritual.sh  railway-deploy-all.sh  railway-health-test-v2.ps1  railway-smoke-test.sh  rollback-release.sh  run-codeql-local.sh  secret-rotation.ps1  secret-rotation.sh  setup-oci-compute.sh  setup-oci-infrastructure.sh  setup-oci-secrets.sh  smoke-test-suite.sh  test-deployment-scripts.cjs  test-governance-services.cjs  test-governance-services.js  test-vauntico-api-health.ps1  test-verification-scripts.ps1  validate-deployment.sh  validate-env.js  (+5 more)
sdk/python/: README.md  pyproject.toml  pytest.ini  setup.py
sdk/python/src/vauntico_sdk/: __init__.py  client.py  types.py
sequentialthinking-mcp-server/: demo.md  test_sequential_thinking.js
server-v2/: .env.example  .env.test  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  GOVERNANCE_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_SUMMARY.md  check-db.js  ecosystem.config.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  railway.toml  run-migration-cmd.bat  run-migration-cross-platform.sh  run-migration-node.js  run-migration.bat  services-health-check.js  simple-test.js  tsconfig.json  validate-endpoints.sh  vercel.json
src/: .eslintrc.flat.js  .eslintrc.js  App.css  App.jsx  index.css  index.css.backup  main.jsx  package.json  railway.toml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
terraform-mcp-server/: README.md  example.tf
tests/: load-test.yml
tools/: crawl-link-validator.js  stress-test.js  vaunticoAudit.cjs
vault-landing/: railway.toml
vauntico-fulfillment-engine/: .env.example  .env.test  .gitignore  README.md  health.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  railway.toml  server.js  vercel.json
vauntico-mvp/: .eslintrc.js  .eslintrc.json  .gitignore  .stylelintrc.json  CONTRIBUTING.md  DASHBOARD_README.md  DEPLOYMENT_CHANGELOG.md  DEPLOYMENT_CHECKLIST.txt  DEPLOYMENT_QUICK_START.md  DEPLOY_NOW.md  (+34 more)
(+816 files in other folders)
